<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/new_user_page"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Enter_name"
        android:id="@+id/Enter_Name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/User_name"
        android:layout_below="@+id/Enter_Name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Choose_your_age"
        android:id="@+id/Choose_age_display"
        android:layout_below="@+id/User_name"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine_and_below"
        android:id="@+id/nine_and_below_btn"
        android:background="@drawable/custom_button"
        android:onClick="age_onClick"
        android:layout_below="@+id/Choose_age_display"
        android:layout_alignEnd="@+id/Choose_age_display"
        android:layout_marginTop="46dp"
        android:layout_alignStart="@+id/Choose_age_display" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_to_eleven"
        android:id="@+id/ten_to_eleven"
        android:background="@drawable/custom_button"
        android:onClick="age_onClick"
        android:layout_below="@+id/nine_and_below_btn"
        android:layout_alignStart="@+id/nine_and_below_btn"
        android:layout_alignEnd="@+id/nine_and_below_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twelve_and_above"
        android:id="@+id/twelve_and_above"
        android:background="@drawable/custom_button"
        android:onClick="age_onClick"
        android:layout_below="@+id/ten_to_eleven"
        android:layout_alignEnd="@+id/ten_to_eleven"
        android:layout_alignStart="@+id/ten_to_eleven" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Choose_your_gender"
        android:id="@+id/Choose_gender_display"
        android:layout_below="@+id/twelve_and_above"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Gender"
        android:layout_below="@+id/Choose_gender_display"
        android:layout_alignStart="@+id/User_name"
        android:layout_alignEnd="@+id/twelve_and_above">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:id="@+id/male_button"
            android:onClick="radioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:id="@+id/female_button"
            android:onClick="radioButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_btn"
            android:background="@drawable/custom_button"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>
</RelativeLayout>
