<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/set_color_scheme"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Main_Menu"
        android:id="@+id/Main_menu_display"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Default"
        android:id="@+id/Default"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/Main_menu_display"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/Main_menu_display"
        android:layout_alignEnd="@+id/Main_menu_display" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Option1"
        android:id="@+id/option1"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/Default"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/Main_menu_display"
        android:layout_alignEnd="@+id/Default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Option2"
        android:id="@+id/option2"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/option1"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/option1"
        android:layout_alignEnd="@+id/option1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Option3"
        android:id="@+id/option3"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/option2"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/option2"
        android:layout_alignEnd="@+id/option2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_Menu"
        android:id="@+id/Main_menu"
        android:background="@drawable/custom_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
