<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/main_menu_page"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Main_Menu"
        android:id="@+id/Main_menu_display"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New_user"
        android:id="@+id/New_user_btn"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/Main_menu_display"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/Main_menu_display"
        android:layout_alignEnd="@+id/Main_menu_display" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_user"
        android:id="@+id/select_user_btn"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/New_user_btn"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/Main_menu_display"
        android:layout_alignEnd="@+id/New_user_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color_scheme"
        android:id="@+id/color_scheme"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/select_user_btn"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/select_user_btn"
        android:layout_alignEnd="@+id/select_user_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:id="@+id/settings_btn"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/color_scheme"
        android:layout_marginTop="51dp"
        android:layout_alignStart="@+id/color_scheme"
        android:layout_alignEnd="@+id/color_scheme"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/test_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
