<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/lr_answers"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="In this section you are asked to recall the last word of each statement."
        android:id="@+id/info"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Statement1"
        android:id="@+id/Q1"
        android:layout_below="@+id/info"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/A1"
        android:layout_alignBottom="@+id/Q1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Statement2"
        android:id="@+id/Q2"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/Q1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/A2"
        android:layout_alignBottom="@+id/Q2"
        android:layout_alignEnd="@+id/A1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Statement3"
        android:id="@+id/Q3"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/Q2"
        android:layout_alignEnd="@+id/Q2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/A3"
        android:layout_alignBottom="@+id/Q3"
        android:layout_alignStart="@+id/A2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Statement4"
        android:id="@+id/Q4"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/Q3"
        android:layout_alignEnd="@+id/Q3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/A4"
        android:layout_alignBottom="@+id/Q4"
        android:layout_alignStart="@+id/A3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Statement5"
        android:id="@+id/Q5"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/Q4"
        android:layout_alignEnd="@+id/Q4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/A5"
        android:layout_alignBottom="@+id/Q5"
        android:layout_alignStart="@+id/A4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
